@@ -5749,6 +5749,11 @@ bvw_element_msg_sync (GstBus *bus, GstMessage *msg, gpointer data)
 
     g_mutex_lock (bvw->priv->lock);
     bvw_update_interface_implementations (bvw);
+    if (bvw->priv->xoverlay == NULL) {
+      GstObject *sender = GST_MESSAGE_SRC (msg);
+      if (sender && GST_IS_X_OVERLAY (sender))
+        bvw->priv->xoverlay = GST_X_OVERLAY (gst_object_ref (sender));
+    }
     g_mutex_unlock (bvw->priv->lock);
 
     g_return_if_fail (bvw->priv->xoverlay != NULL);
